--- a/index-aqueduct.html
+++ b/index-aqueduct.html
@@ -150,6 +150,8 @@
 
 <p><img src="images/authentication/auth-success.png" alt="Auth success" /></p>
 
+<p>Once generated, a token is valid until any of the associated user information (name, email, or associated applications) changes. If your token becomes invalid, you will need to log in and go to <a href="https://api.resourcewatch.org/auth/generate-token">https://api.resourcewatch.org/auth/generate-token</a> to generate a new token.</p>
+
 <h2 id="how-to-create-a-new-user">How to create a new user</h2>
 
 <p>To create a new user make a request like the one in the sidebar:</p>
