--- a/index.html
+++ b/index.html
@@ -271,6 +271,18 @@
 
 <p>However, in order to perform GET requests for content that is not private, there&rsquo;s no need for any sort of authentication or token.</p>
 
+<h2 id="registering-a-new-user-account">Registering a new user account</h2>
+
+<p><em>Note: Creating an user requires sending a confirmation email, so, so please ensure that you create a new user using an email account that you have access to. Otherwise you won&rsquo;t be able to login.</em></p>
+
+<ol>
+<li>On the browser, visit the API&rsquo;s sign up page: <a href="https://api.resourcewatch.org/auth/sign-up">https://api.resourcewatch.org/auth/sign-up</a>.</li>
+<li>Create a new user providing an email and a password.</li>
+<li>Wait for the confirmation email and click on the link on the email.</li>
+</ol>
+
+<p>After completing these steps, you will be able to login and get your private tokens.</p>
+
 <h2 id="how-to-generate-your-private-token">How to generate your private token</h2>
 
 <ol>
