--- a/index-gfw.html
+++ b/index-gfw.html
@@ -3726,8 +3726,10 @@ curl -i -X GET <span class="s1">'https://api.resourcewatch.org/v1/download/9be3b
 
 <ul>
 <li>We&rsquo;ll first discuss the details of the endpoints that allow you to <a href="https://en.wikipedia.org/wiki/Create,_read,_update_and_delete">CRUD</a> layers, without focusing on the actual data contained in it.</li>
-<li>In an future version of these docs, we&rsquo;ll dive deeper into some of the most common structures used to store data in the layer&rsquo;s open format fields, and help you use that data to render an actual layer on a web application.</li>
+<li>In an future version of these docs, we&rsquo;ll dive deeper into some of the most common structures used to store data in the layer&rsquo;s open format fields.</li>
 </ul>
+
+<p>After viewing the documentation below, consider looking at the <a href="https://resource-watch.github.io/doc-api/tutorials.html#mapbox-webmap-quickstart">webmap tutorial</a> for a step-by-step guide to rendering an actual layer on a web application.</p>
 
 <h2 id="getting-all-layers">Getting all layers</h2>
 
@@ -4382,7 +4384,7 @@ curl -X GET <span class="s2">"https://api.resourcewatch.org/v1/layer/&lt;layer_s
 
 <p>When a layer is created, a <a href="#vocabulary-and-tags">vocabulary tag</a> for it is automatically created, associated with the dataset tag.</p>
 
-<p>The layer service was built to be very flexible, and not be restricted to specific layer rendering libraries or tools. This gives you the freedom to use virtually any rendering technology you want, but it also means you&rsquo;ll have to make additional decisions on how to structure your data into the different open format fields provided by a RW API layer. In an future release of these docs, we&rsquo;ll show you some examples of how existing applications use different rendering tools with the layer endpoints, to give you an idea on how you can structure your own data, and also as a way to help you get started creating your first layers for your own custom applications.</p>
+<p>The layer service was built to be very flexible, and not be restricted to specific layer rendering libraries or tools. This gives you the freedom to use virtually any rendering technology you want, but it also means you&rsquo;ll have to make additional decisions on how to structure your data into the different open format fields provided by a RW API layer. In a future release of these docs, we&rsquo;ll show you some examples of how existing applications use different rendering tools with the layer endpoints, to give you an idea on how you can structure your own data, and also as a way to help you get started creating your first layers for your own custom applications. Until then, the <a href="https://resource-watch.github.io/doc-api/tutorials.html">tutorials section of the documentation</a> shows an example of how existing raster tile layers may be structured and how the information in the layer response can be utilized by a third-party visualization library.</p>
 
 <h4 id="errors-for-creating-a-layer">Errors for creating a layer</h4>
 
