publish: Analysis GEE badges
generated from commit 5d305b3e36f104071037d4533678b51db4c76f6f

--- a/developer.html
+++ b/developer.html
@@ -1847,14 +1847,14 @@ curl -X POST https://api.resourcewatch.org/auth/user/find-by-ids <span class="se
 <tr>
 <td>gee</td>
 <td style="text-align: center"><a href="https://github.com/resource-watch/adapter-earth-engine">Github</a></td>
-<td style="text-align: right"></td>
-<td style="text-align: right"></td>
+<td style="text-align: right"><a href="https://travis-ci.org/resource-watch/adapter-earth-engine"><img src="https://travis-ci.org/resource-watch/adapter-earth-engine.svg?branch=dev" alt="Build Status" /></a></td>
+<td style="text-align: right"><a href="https://codeclimate.com/github/resource-watch/adapter-earth-engine/test_coverage"><img src="https://api.codeclimate.com/v1/badges/b221d818e0e99f94d0c8/test_coverage" alt="Test Coverage" /></a></td>
 </tr>
 <tr>
 <td>gee-tiles</td>
 <td style="text-align: center"><a href="https://github.com/resource-watch/gee-tiles">Github</a></td>
-<td style="text-align: right"></td>
-<td style="text-align: right"></td>
+<td style="text-align: right"><a href="https://travis-ci.org/resource-watch/gee-tiles"><img src="https://travis-ci.org/resource-watch/gee-tiles.svg?branch=dev" alt="Build Status" /></a></td>
+<td style="text-align: right"><a href="https://codeclimate.com/github/resource-watch/gee-tiles/test_coverage"><img src="https://api.codeclimate.com/v1/badges/6c8dd3205ab1cb4a0073/test_coverage" alt="Test Coverage" /></a></td>
 </tr>
 <tr>
 <td>geostore</td>
@@ -1937,8 +1937,8 @@ curl -X POST https://api.resourcewatch.org/auth/user/find-by-ids <span class="se
 <tr>
 <td>analysis-gee</td>
 <td style="text-align: center"><a href="https://github.com/gfw-api/gfw-analysis-gee">Github</a></td>
-<td style="text-align: right"></td>
-<td style="text-align: right"></td>
+<td style="text-align: right"><a href="https://travis-ci.org/gfw-api/gfw-analysis-gee"><img src="https://travis-ci.org/gfw-api/gfw-analysis-gee.svg?branch=dev" alt="Build Status" /></a></td>
+<td style="text-align: right"><a href="https://codeclimate.com/github/gfw-api/gfw-analysis-gee/test_coverage"><img src="https://api.codeclimate.com/v1/badges/2d03ef51b43e72eae7e1/test_coverage" alt="Test Coverage" /></a></td>
 </tr>
 <tr>
 <td>arcgis-proxy</td>
