--- a/index-gfw.html
+++ b/index-gfw.html
@@ -3633,6 +3633,8 @@ curl -i -X GET <span class="s1">'https://api.resourcewatch.org/v1/query/:dataset
 
 <h2 id="supported-sql-syntax-reference">Supported SQL syntax reference</h2>
 
+<p>This section details the support for SQL syntax for the different dataset providers RW API supports. Keep in mind that your HTTP request parameters (like <code class="prettyprint">sql</code>) should always be escaped according to the official HTTP specification. You can use <a href="https://www.urlencoder.org/">this online tool</a> as an example of proper URL parameter encoding.</p>
+
 <h3 id="cartodb-datasets">CartoDB datasets</h3>
 
 <p>This section describes the SQL support for querying datasets with provider <code class="prettyprint">cartodb</code>.</p>
